--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/Logo/BoopLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>360° Marketing & Services - Creative Agency</title>
+    <title>360° Marketing Services</title>
     <meta
       name="description"
       content="BoopOrg - 360° Creative & Marketing Agency. Strategic branding, performance-driven marketing services, and scalable growth solutions for ambitious brands across FMCG, Media, Technology, and Logistics."
